Fixed alignment on home page, added senators to projects

--- a/css/pokemon.css
+++ b/css/pokemon.css
@@ -128,9 +128,6 @@ hr {
   border-radius: 5px;
 }
 
-.card:hover {
-  border-radius: 10px;
-}
 
 .card img {
   width: 80%;
