--- a/css/senator.css
+++ b/css/senator.css
@@ -20,10 +20,6 @@ nav {
     text-align: center;
 }
 
-.card-content {
-    /* height: 100%; */
-}
-
 .democrat {
     background-color: #232066;
 }
